--- a/railway.toml
+++ b/railway.toml
@@ -1,8 +1,8 @@
 [build]
-builder = "DOCKERFILE"
+builder = "NIXPACKS"
 
 [deploy]
-startCommand = ""
+startCommand = "chmod +x start.sh && ./start.sh"
 
 [[services]]
 name = "miniflux"
