--- a/railway.toml
+++ b/railway.toml
@@ -1,9 +1,6 @@
-[build]
-builder = "NIXPACKS"
-
-[deploy]
-startCommand = "chmod +x start.sh && ./start.sh"
-
-[[services]]
-name = "miniflux"
-port = 8080
+DATABASE_URL=:memory:
+RUN_MIGRATIONS=1
+CREATE_ADMIN=1
+ADMIN_USERNAME=admin
+ADMIN_PASSWORD=123456
+PORT=8080
